# geant4-magnetic-shield

./: .gitignore  CMakeLists.txt  README.md
docs/: Файл DetectorConstruction.hh.md  Шаг 1.md  Шаг 2.md  🏗️ Архитектура проекта для GEANT4.md
include/: ActionInitialization.hh  CosmicRaySampler.hh  DetectorConstruction.hh  EventAction.hh  GeometryHelpers.hh  MagneticField.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  TrackingAction.hh
macros/: geometry_vis.mac  run_1.mac  run_10.mac  run_100.mac  run_10k.mac  run_10k_skydisk.mac  run_50k.mac  run_50k_skydisk.mac  run_stats.mac  vis.mac  vis_save_events_default.mac  vis_save_events_skydisk.mac  vis_save_geometry.mac
simulations/: README.md
simulations/run_10k_default/: run_summary.txt  run_summary_explained.txt  spectrum_passed_habitat.csv
simulations/run_10k_skydisk/: run_summary.txt  run_summary_explained.txt  spectrum_passed_habitat.csv
simulations/run_stats_default/: run_summary.txt  spectrum_passed_habitat.csv
src/: ActionInitialization.cc  CosmicRaySampler.cc  DetectorConstruction.cc  EventAction.cc  GeometryHelpers.cc  MagneticField.cc  MyShield.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc
